remove custom HWH code